WCAG fixes as per QA report

--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -175,12 +175,12 @@
 				<h3>Write to us:</h3>
 				<p>Operations Manager<br />
 					Esquimalt Graving Dock<br />
-					825 Admirals Road<br />
+					825&nbsp;Admirals Road<br />
 					Esquimalt, <acronym title="British Columbia">BC</acronym><br />
 					V9A 2P1<br />
 					Canada</p>
 				<h3>Telephone us:</h3>
-				<p>250-363-3877 or 250-363-8056</p>
+				<p>250-363-3877&nbsp;or 250-363-8056</p>
 				<h3>Fax us:</h3>
 				<p>250-363-8059</p>
 				<h2><a name="con-pri">Privacy Notice Statement</a></h2>
@@ -188,7 +188,7 @@
 					information for the purpose of responding to your questions/comments, and
 					to improve our Internet presence. The information will be held in Public
 					Works and Government Services Canada's Personal Information Bank number
-					PPU 115 Internet and PPE 830 Intranet Services, and it will be retained
+					PPU 115&nbsp;Internet and PPE 830&nbsp;Intranet Services, and it will be retained
 					according to the retention and disposal schedule established for this bank.</p>
 				<p>Your personal information is protected under the provisions of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html"><em>Privacy Act</em></a>. Under the Act, you have the right to request access to and
 							correction of your personal information, if erroneous or incomplete. If
@@ -203,7 +203,7 @@
 						of federal Members of Parliament.</p>
 				<p>The Internet is a public forum and electronic information can be intercepted.
 					This is not a secure Web site. Please do not disclose unnecessary confidential
-					information about yourself or your accounts with PWGSC. </p>
+					information about yourself or your accounts with <acronym title='Public Works and Government Services Canada'>PWGSC</acronym>. </p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
