--- a/cn-cu-fra.html
+++ b/cn-cu-fra.html
@@ -92,7 +92,7 @@
 						de notre <a href="#con-pri">&Eacute;nonc&eacute; de confidentialit&eacute;</a>.</strong></p>
 
 				<h2>Par courriel</h2>
-				<p>Demandes g&eacute;n&eacute;rales : <br />
+				<p>Demandes g&eacute;n&eacute;rales&nbsp;: <br />
 					<a href="mailto:cse-egd@tpsgc-pwgsc.gc.ca">cse-egd@tpsgc-pwgsc.gc.ca</a> </p>
 				<h2>Par formulaire</h2>
 				<p>Pour obtenir une r&eacute;ponse par voie &eacute;lectronique, veuillez
@@ -107,11 +107,11 @@
 					<input name="subject" value="Commentaires du site CSE" type="hidden" />
 					<input name="recipient" value="cse-egd@tpsgc-pwgsc.gc.ca" type="hidden" />
 
-					<label for="id1"><strong>Nom :</strong>&nbsp;</label>
+					<label for="id1"><strong>Nom&nbsp;:</strong>&nbsp;</label>
 					<br />
 					<input id="id1" maxlength="50" size="50" name="realname" />
 					<br />
-					<label for="id2"><strong>Adresse &eacute;lectronique :</strong>&nbsp;</label>
+					<label for="id2"><strong>Adresse &eacute;lectronique&nbsp;:</strong>&nbsp;</label>
 					<br />
 					<input id="id2" size="50" name="email" />
 					<br />
@@ -164,13 +164,13 @@
 				<h3>Notre adresse postale&nbsp;:</h3>
 				<p>Directeur des op&eacute;rations<br />
 					Cale s&egrave;che d'Esquimalt <br />
-					825 Admirals Road<br />
+					825&nbsp;Admirals Road<br />
 					Esquimalt (C.-B.)<br />
 					V9A 2P1<br />
 					Canada</p>
 				<h3>T&eacute;l&eacute;phone&nbsp;:</h3>
 				<p> 604-666-5191</p>
-				<h3>Notre fax :</h3>
+				<h3>Notre fax&nbsp;:</h3>
 				<p>250-363-8059</p>
 				<h2><a name="con-pri">&Eacute;nonc&eacute; de confidentialit&eacute;</a></h2>
 				<p>Les renseignements sont fournis &agrave; titre volontaire. Nous ne nous
@@ -178,11 +178,11 @@
 					vos questions et commentaires et pour am&eacute;liorer notre pr&eacute;sence
 					sur le Web. Ces renseignements seront conserv&eacute;s dans les fichiers
 					de renseignements personnels de Travaux publics et Services gouvernementaux
-					Canada num&eacute;ros PPU 115 (Services Internet) et PPE 830 (Services intranet),
+					Canada num&eacute;ros PPU 115&nbsp;(Services Internet) et PPE 830&nbsp;(Services intranet),
 					selon les calendriers de conservation et de disposition &eacute;tablis pour
 					ces fichiers.</p>
 				<p>Vos renseignements personnels sont prot&eacute;g&eacute;s en vertu des
-					dispositions de la <a href="http://laws-lois.justice.gc.ca/fra/acts/P-21/index.html"><em>Loi
+					dispositions de la <a href="http://laws-lois.justice.gc.ca/fra/lois/P-21/index.html"><em>Loi
 					sur la protection des renseignements personnels</em></a>. De plus, conform&eacute;ment
 					aux dispositions de cette loi, vous avez le droit de demander d'acc&eacute;der &agrave; vos
 					renseignements personnels et d'y apporter des modifications s'ils sont erron&eacute;s
@@ -201,7 +201,7 @@
 				<p>Internet est un forum public et l'information &eacute;lectronique peut &ecirc;tre
 					intercept&eacute;e. Le pr&eacute;sent site n'est pas un site Web prot&eacute;g&eacute;.
 					Ne divulguez pas d'information confidentielle non n&eacute;cessaire qui
-					vous concerne ou qui concerne vos comptes avec TPSGC.</p>
+					vous concerne ou qui concerne vos comptes avec <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>.</p>
 			</div>
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
 
