--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -94,9 +94,9 @@
 					Code of Conduct
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<h2><strong>ARTICLE 1 </strong></h2>
+				<h2><strong>ARTICLE 1&nbsp;</strong></h2>
 				<h3><strong>OBJECT AND GUIDING PRINCIPLES</strong></h3>
-				<p><strong>1.1 Object of Code</strong>. <em> Conducting business at the Esquimalt
+				<p><strong>1.1&nbsp;Object of Code</strong>. <em> Conducting business at the Esquimalt
 						Graving Dock is a privilege, not a right.</em> The object of this Code
 						is to establish and articulate the corporate values, responsibilities,
 						obligations and ethical policies that all businesses, as applicable, are
@@ -115,14 +115,14 @@
 					it is expected that: users conduct themselves with integrity and treat others
 					with respect; act in the best interest of the public; and respect the commitments
 					of this federal government facility. </p>
-				<p><strong>1.2 Guiding Principles</strong>. All businesses operating at the
+				<p><strong>1.2&nbsp;Guiding Principles</strong>. All businesses operating at the
 					Esquimalt Graving Dock are to abide by the following principles:</p>
 				<p>(a) The Government of Canada operates the Esquimalt Graving Dock as an
 					open, public facility, providing service on a first-come, first-served basis.
 					Engaging in behavior contrary to its use as a unique public facility does
 					not allow for a healthy and competitive marketplace on the West Coast;</p>
 				<p>(b) The Government of Canada commits to its environmental responsibilities
-					under <acronym title="International Standards Organization">ISO</acronym> 14001 certification;</p>
+					under <acronym title="International Standards Organization">ISO</acronym> 14001&nbsp;certification;</p>
 				<p>(c) As a designated port, the Government of Canada will adhere to the
 					commitments required for international security as determined by the International
 					Ship and Port Security (ISPS) legislation. </p>
@@ -132,34 +132,34 @@
 				<p>(e) All businesses are to accept responsibility for their actions and
 					activities; and</p>
 				<p>(f) Ethical behavior and goodwill demonstrated by all businesses is expected. </p>
-				<p><strong>1.3 Application of Code</strong>. This Code applies to all users
+				<p><strong>1.3&nbsp;Application of Code</strong>. This Code applies to all users
 					conducting business at the Esquimalt Graving Dock.</p>
-				<p><strong>1.4 Scope of Obligations</strong>. Complying to the specific requirements
+				<p><strong>1.4&nbsp;Scope of Obligations</strong>. Complying to the specific requirements
 					of this Code will not absolve a director or officer of responsibility from
 					taking such additional action as may be necessary to conform with any standard
 					of conduct or comply with any duty imposed by the Esquimalt Graving Dock
 					Regulations and the Best Practices of the Esquimalt Graving Dock or otherwise
 					by applicable international, national, provincial and local laws.</p>
-				<p><strong>1.5 Acknowledgement by Businesses. </strong>One senior authorized
+				<p><strong>1.5&nbsp;Acknowledgement by Businesses. </strong>One senior authorized
 					officer of each respective business will acknowledge, in writing, to the
 					Manager, Esquimalt Graving Dock that:</p>
 				<p>(a) they have read and understood this Code; and</p>
 				<p>(b) in the case of each on-site user, compliance with this Code is a condition
 					of renewing an existing on-site lease or entering into a new on-site lease.</p>
-				<p><strong>1.6 Timing of Acknowledgement</strong>. The senior authorized
+				<p><strong>1.6&nbsp;Timing of Acknowledgement</strong>. The senior authorized
 					officer of each respective business will deliver the acknowledgement described
-					in Article 1.5 of this Code to the Manager, Esquimalt Graving Dock within
+					in Article 1.5&nbsp;of this Code to the Manager, Esquimalt Graving Dock within
 					two weeks of official receipt.</p>
-				<p><strong>1.7 Distribution</strong>. This Code will be distributed to all
+				<p><strong>1.7&nbsp;Distribution</strong>. This Code will be distributed to all
 					businesses operating at the Esquimalt Graving Dock and will be published
 					on the <em>www.pwgsc.gc.ca/pacific/egd</em> web site.</p>
-				<p><strong>1.8 Code Review</strong>. This Code will be reviewed and amended
+				<p><strong>1.8&nbsp;Code Review</strong>. This Code will be reviewed and amended
 					as required.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
-				<h2><strong>ARTICLE 2 </strong></h2>
+				<h2><strong>ARTICLE 2&nbsp;</strong></h2>
 				<h3> <strong>ETHICAL VALUES</strong></h3>
-				<p><strong>2.1 Ethical values to demonstrate</strong>. As an open, multi-user
+				<p><strong>2.1&nbsp;Ethical values to demonstrate</strong>. As an open, multi-user
 					public facility, owned by the Government of Canada, businesses will demonstrate:</p>
 				<p>(a) <em>Democratic values</em> by complying with Canada&rsquo;s obligations
 					and all relevant laws to serve the public interest;</p>
@@ -172,18 +172,18 @@
 					colleagues and citizens of Canada.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
-				<h2><strong>ARTICLE 3 </strong></h2>
+				<h2><strong>ARTICLE 3&nbsp;</strong></h2>
 				<h3><strong>BUSINESS REQUIREMENTS </strong></h3>
-				<p><strong>3.1 The Esquimalt Graving Dock</strong>. The Esquimalt Graving
+				<p><strong>3.1&nbsp;The Esquimalt Graving Dock</strong>. The Esquimalt Graving
 					Dock is a dynamic world-class facility that, in partnership with the private
 					sector, provides high quality, on-time service to national and international
 					clients. </p>
-				<p><strong>3.2 The facility&rsquo;s reputation</strong>. The Esquimalt Graving
+				<p><strong>3.2&nbsp;The facility&rsquo;s reputation</strong>. The Esquimalt Graving
 					Dock&rsquo;s reputation is based on the prudent management of assets, the
 					provision of quality services which meet customer needs, a competitive industry
 					and good faith in all agreements. As a federally-owned facility, the Esquimalt
 					Graving Dock&rsquo;s reputation is a reflection on the Government of Canada. </p>
-				<p><strong>3.3 Business Relationship Requirements. </strong>The Management
+				<p><strong>3.3&nbsp;Business Relationship Requirements. </strong>The Management
 					of the Esquimalt Graving Dock will hold all businesses accountable for their
 					actions and hold everyone to the highest standard of respectful and responsible
 					behavior. The Esquimalt Graving Dock will only seek business relationships
@@ -196,9 +196,9 @@
 					high standards of business integrity.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
-				<h2><strong>ARTICLE 4 </strong></h2>
+				<h2><strong>ARTICLE 4&nbsp;</strong></h2>
 				<h3><strong>STANDARDS OF BEHAVIOUR</strong></h3>
-				<p><strong>4.1 Obligations of businesses.</strong> All businesses operating
+				<p><strong>4.1&nbsp;Obligations of businesses.</strong> All businesses operating
 					at the facility must:</p>
 				<p>(a) Respect and comply with all applicable local, national and international
 					laws, regulations, treaties and industry standards;</p>
@@ -240,20 +240,20 @@
 					receive a copy of this Code of Conduct.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
-				<h2><strong>ARTICLE 5 </strong></h2>
+				<h2><strong>ARTICLE 5&nbsp;</strong></h2>
 				<h3><strong>COMPLIANCE </strong></h3>
-				<p><strong>5.1 Determination of compliance</strong>. <acronym title="Esquimalt Graving Dock">EGD</acronym> Management will
+				<p><strong>5.1&nbsp;Determination of compliance</strong>. <acronym title="Esquimalt Graving Dock">EGD</acronym> Management will
 					monitor compliance to this Code. Where there is a written disclosure made
 					to the Manager, Esquimalt Graving Dock or the Regional Director General
 					which indicates a failure to comply with this Code, it will be determined:</p>
-				<p>(a) whether the disclosure indicates non-compliance to Article 4 of this
+				<p>(a) whether the disclosure indicates non-compliance to Article 4&nbsp;of this
 					Code; and</p>
 				<p>(b) whether, if applicable, a business has failed to comply with this
 					Code. </p>
-				<p><strong>5.2 Notice of Non-Compliance</strong>. Upon making an initial
+				<p><strong>5.2&nbsp;Notice of Non-Compliance</strong>. Upon making an initial
 					determination under Article 5.1, Esquimalt Graving Dock Management will
 					advise the affected business in writing.</p>
-				<p><strong>5.3 Response of Notice of Non-Compliance</strong>. The senior
+				<p><strong>5.3&nbsp;Response of Notice of Non-Compliance</strong>. The senior
 					authorized officer will resolve non-compliance issues in relation to this
 					Code of Conduct by providing a written response to the Manager, Esquimalt
 					Graving Dock within seven (7) calendar days of receiving a notice of non-compliance.
@@ -264,12 +264,12 @@
 				<p>The acceptability of the corrective and preventative actions will be determined
 					by the Manager, Esquimalt Graving Dock, within seven (7) calendar days,
 					after further review of all relevant information. </p>
-				<p> <strong>5.4 Opportunity to be Heard. </strong>Esquimalt Graving Dock
+				<p> <strong>5.4&nbsp;Opportunity to be Heard. </strong>Esquimalt Graving Dock
 					Management or the Regional Director General, will provide the senior authorized
 					officer the opportunity to be heard immediately upon receipt of an alleged
 					breach and/or in connection with an initial determination of non-compliance
 					made pursuant to this Article of the Code.</p>
-				<p><strong>5.5 Non-Compliance to Legislation</strong>. Esquimalt Graving
+				<p><strong>5.5&nbsp;Non-Compliance to Legislation</strong>. Esquimalt Graving
 					Dock Management is required to report, to the appropriate federal, provincial,
 					or municipal authority, violations of any applicable laws, including but
 					not limited to, the following:</p>
@@ -285,15 +285,15 @@
 					<li><em>Financial Administration Act </em></li>
 					<li><em>Criminal Code </em></li>
 				</ul>
-				<p><strong>5.6 Advice and disclosure</strong>. Users may obtain clarification
+				<p><strong>5.6&nbsp;Advice and disclosure</strong>. Users may obtain clarification
 					to elements of this Code of Conduct or report any alleged breaches directly
 					to:</p>
 				<ul>
 					<li>Esquimalt Graving Dock<br />
-					Telephone: 250-363-3879 or 250-363-8056<br />
+					Telephone: 250-363-3879&nbsp;or 250-363-8056<br />
 					Email: <em><a href="mailto:egd-cse@pwgsc-tpsgc.gc.ca">egd-cse@pwgsc-tpsgc.gc.ca</a></em></li>
 					</ul>
-        <p><strong>5.7 Failure to comply</strong>. Failure to comply with this Code
+        <p><strong>5.7&nbsp;Failure to comply</strong>. Failure to comply with this Code
 					could result in Esquimalt Graving Dock Management:</p>
 				<ul>
 					<li>Denying access to the Esquimalt Graving Dock property;</li>
