--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -17,7 +17,7 @@
 <meta name="dc.title" content="About the Dock - EGD - PWGSC" />
 <meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Measurement" />
 
-<meta name="dc.language" scheme="ISO639-2/1T" content="eng" />
+<meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dc.publisher" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dc.audience" content=" " />
@@ -92,10 +92,10 @@
 					About the Dock
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<p>The Esquimalt Graving Dock's dimensions measure 357.5 metres by 38.4 metres
-					- or about 1,200 feet long by 135 feet wide. The north landing jetty is
-					305 metres long (1000 feet) and contains 10 metres of water (30 feet) at
-					low tide. There is another 305 metres (1000 feet) of berth frontage at the
+				<p>The Esquimalt Graving Dock's dimensions measure 357.5&nbsp;metres by 38.4&nbsp;metres
+					- or about 1,200&nbsp;feet long by 135&nbsp;feet wide. The north landing jetty is
+					305&nbsp;metres long (1000&nbsp;feet) and contains 10&nbsp;metres of water (30&nbsp;feet) at
+					low tide. There is another 305&nbsp;metres (1000&nbsp;feet) of berth frontage at the
 					south landing wharf.</p>
 				<p>The Dock can be divided in two with a caisson and closed by floating caissons
 					ballasted with concrete and sea water. A tunnel on the north side is used
@@ -114,7 +114,7 @@
         <br />
 				<div class="option4">
 				<h2>Dock Dimensions</h2>
-				<a href="images/dimensions.gif"><img src="images/dimensions-2.gif" alt="Plan View and Logitudinal Section of Esquimalt Graving Dock with various dimensions" width="450" height="282" /></a>
+				<a href="dimensions2-eng.html"><img src="images/dimensions-2.gif" alt="Plan View and Logitudinal Section of Esquimalt Graving Dock with various dimensions" width="450" height="282" /></a>
 				<h2>Aerial View of the Dock</h2>
 				<img src="images/aerienne-aerial-eng.jpg" width="450" height="284" alt="Aerial view of North Landing Wharf and South Jetty" />
 				<h2>Cross Section of the Dock</h2>
@@ -137,60 +137,60 @@
 						<td colspan="2">Clear inside length, cassion in place:</td>
 					</tr>
 					<tr>
-						<td headers="area">in stop #1</td>
-						<td headers="metres"> 357.5 </td>
+						<td headers="area">in stop&nbsp;%1</td>
+						<td headers="metres"> 357.5&nbsp;</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stop #2 </td>
+						<td headers="area"> in stop&nbsp;%2&nbsp;</td>
 						<td headers="metres"> 347.67</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stop #3 </td>
-						<td headers="metres"> 225.65 </td>
+						<td headers="area"> in stop&nbsp;%3&nbsp;</td>
+						<td headers="metres"> 225.65&nbsp;</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stop #4 </td>
-						<td headers="metres"> 119.07 </td>
+						<td headers="area"> in stop&nbsp;%4&nbsp;</td>
+						<td headers="metres"> 119.07&nbsp;</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stops #2 and #3 </td>
-						<td headers="metres"> 114.96 </td>
+						<td headers="area"> in stops&nbsp;%2&nbsp;and&nbsp;%3&nbsp;</td>
+						<td headers="metres"> 114.96&nbsp;</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stops #2 and #4 </td>
-						<td headers="metres"> 221.64 </td>
+						<td headers="area"> in stops&nbsp;%2&nbsp;and&nbsp;%4&nbsp;</td>
+						<td headers="metres"> 221.64&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Width of dock at entrance </td>
-						<td headers="metres"> 41.15 </td>
+						<td headers="metres"> 41.15&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Depth of water over dock sill (High Water
 							Ordinary Spring Tide) </td>
-						<td headers="metres"> 12.19 </td>
+						<td headers="metres"> 12.19&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Depth of water over dock sill (Low Water
 							Ordinary Spring Tide) </td>
-						<td headers="metres"> 9.14 </td>
+						<td headers="metres"> 9.14&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Depth of water over keel blocks (High Water
 							Ordinary Spring Tide) </td>
-						<td headers="metres"> 12.22 </td>
+						<td headers="metres"> 12.22&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Depth of water over keel blocks (Low Water
 							Ordinary Spring Tide) </td>
-						<td headers="metres"> 9.17 </td>
+						<td headers="metres"> 9.17&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Height of keel blocks above deck floor </td>
-						<td headers="metres"> 1.55 </td>
+						<td headers="metres"> 1.55&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Height of floor to coping </td>
-						<td headers="metres"> 14.93 </td>
+						<td headers="metres"> 14.93&nbsp;</td>
 					</tr>
 				</table>
 				</div>
