--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -88,12 +88,12 @@
 					Renseignments g&eacute;n&eacute;raux
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<p>Le bassin de mise en cale s&egrave;che d'Esquimalt mesure 357,5 m&egrave;tres
-					sur 38,4 m&egrave;tres - soit environ 1 200 pieds de longueur sur 135 de
-					largeur. La jet&eacute;e d'embarquement nord mesure 305 m&egrave;tres de
-					longueur (1 000 pieds), avec une profondeur d'eau de 10 m&egrave;tres (30
+				<p>Le bassin de mise en cale s&egrave;che d'Esquimalt mesure 357,5&nbsp;m&egrave;tres
+					sur 38,4&nbsp;m&egrave;tres - soit environ 1&nbsp;200&nbsp;pieds de longueur sur 135&nbsp;de
+					largeur. La jet&eacute;e d'embarquement nord mesure 305&nbsp;m&egrave;tres de
+					longueur (1&nbsp;000&nbsp;pieds), avec une profondeur d'eau de 10&nbsp;m&egrave;tres (30
 					pieds) &agrave; mar&eacute;e basse. Les installations comptent &eacute;galement
-					une zone mouillage de 305 m&egrave;tres le long du quai sud.</p>
+					une zone mouillage de 305&nbsp;m&egrave;tres le long du quai sud.</p>
 				<p>Le bassin peut &ecirc;tre divis&eacute; en deux &agrave; l'aide d'un caisson
 					et &ecirc;tre ferm&eacute; par des caissons flottants lest&eacute;s de b&eacute;ton
 					et d'eau de mer. Un tunnel, c&ocirc;t&eacute;  nord, sert &agrave; inonder
@@ -107,7 +107,7 @@
 					un syst&egrave;me d'&eacute;clairage au mercure standard. </p>
 				<div class="option4">
 					<h2>Dimensions du bassin</h2>
-					<a href="images/dimensions.gif"><img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="450" height="282" /></a>
+					<a href="dimensions2-fra.html"><img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="450" height="282" /></a>
 					<h2>Vue a&eacute;rienne du bassin</h2>
 					<img src="images/aerienne-aerial-fra.jpg" width="450" height="284" alt="Vue aérienne du quai d'embarquement nord et de la jetée sud." />
 					<h2>Vue en coupe du bassin</h2>
@@ -131,7 +131,7 @@
 									:</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">&agrave; la but&eacute;e 1 </td>
+							<td headers="SUPERFICIE">&agrave; la but&eacute;e 1&nbsp;</td>
 							<td headers="METRES">357,5</td>
 						</tr>
 						<tr>
@@ -147,11 +147,11 @@
 							<td headers="METRES">119,07</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">aux but&eacute;es 2 et 3</td>
+							<td headers="SUPERFICIE">aux but&eacute;es 2&nbsp;et 3</td>
 							<td headers="METRES">114,96</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">aux but&eacute;es 2 et 4</td>
+							<td headers="SUPERFICIE">aux but&eacute;es 2&nbsp;et 4</td>
 							<td headers="METRES">221,64</td>
 						</tr>
 						<tr>
@@ -190,7 +190,7 @@
 						</tr>
 					</table>
 
-					<p><i>Source : &nbsp;Harbour & Shipping Journal, Juillet 2002, Volume 85,
+					<p><i>Source&nbsp;: &nbsp;Harbour &amp; Shipping Journal, Juillet 2002, Volume 85,
 							n<sup>o</sup> 7</i> </p>
 				</div>
 			</div>
