--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>History - EGD - PWGSC</title>
+<title>Dock Dimensions - EGD - PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -14,8 +14,8 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="History - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; History" />
+<meta name="dc.title" content="Dock Dimensions - EGD - PWGSC" />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Measurement" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
@@ -31,14 +31,13 @@
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
-<meta name="description" content="When British Columbia became a province within the Dominion of Canada in 1871, the Terms of the Union specified a graving dock be built at Lang Cove. The Colony's economy heavily relied on the commercial shipbuilding industry and it had to ensure it could attract business. At the time, the Drydock was large enough to accommodate every ship in the British Empire." />
-<meta name="keywords" content="Esquimalt Graving Dock, history" />
+<meta name="description" content="The Esquimalt Graving Dock's dimensions measure 357.5 metres by 38.4 metres - or about 1,200 feet long by 135 feet wide. The north landing jetty is 305 metres long (1000 feet) and contains 10 metres of water (30 feet) at low tide. There is another 305 metres (1000 feet) of berth frontage at the south landing wharf." />
+<meta name="keywords" content="Esquimalt Graving Dock, dimensions" />
 
 <meta name="pwgsc.contact.email" content="questions@pwgsc.gc.ca" />
 <!-- METADATA ENDS | FIN DES METADONNEES -->
 <!-- TEMPLATE SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS DU GABARIT -->
 <link href="/clf20/css/base.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/2col.css" media="screen, print" rel="stylesheet" type="text/css" />
 <style type="text/css" media="all">
 @import url(/clf20/css/base2.css);
 </style>
@@ -73,58 +72,25 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;History</p>
-		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
-		<div class="colLayout">
-			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- LEFT SIDE MENU BEGINS | DEBUT DU MENU LATERAL GAUCHE -->
-			<div class="left">
-				<!--#include virtual="/clf20/ssi/left-menu-gauche1-eng.html"-->
-				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-eng.html"-->
-				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-eng.html"-->
+			&gt;&nbsp;Dock Dimensions </p>
+		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->	
+		
+		<!-- ONE COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE D'UNE COLONNE -->
+	<!-- CONTENT BEGINS | DEBUT DU CONTENU --> 
+	<div class="center">	
+		<div class="option2">
+			<h1><a name="cont" id="cont">
+		<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
+			Dock Dimensions
+		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
+			</a></h1>
+		
+		<img src="images/dimensions.gif" title="Plan View and Logitudinal Section of Esquimalt Graving Dock with various dimensions" alt="" width="740"  style="width: 740px; " />
 			</div>
-			<!-- LEFT SIDE MENU ENDS | FIN DU MENU LATERAL GAUCHE -->
-			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
-
-			<div class="center">
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					History
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
-				<p>When British Columbia became a province within the Dominion of Canada
-					in 1871, the Terms of the Union specified a graving dock be built at Lang
-					Cove. The Colony's economy heavily relied on the commercial shipbuilding
-					industry and it had to ensure it could attract business. At the time, the
-					Drydock was large enough to accommodate every ship in the British Empire.</p>
-				<p><img src="images/reginolite.jpg" alt="September 14, 1926 - Painting progress of Reginolite, first vessel in drydock" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />The
-					federal department of Public Works assumed custodianship of the graving
-					dock in 1887. As vessels grew in size, it was decided to build a larger
-					drydock at Skinner's Cove in Esquimalt. Skinner's Cove was chosen because
-					it was sheltered from wind and was situated on a solid rock basin - ideal
-					for a drydock. The dock took six years to build and was the second largest
-					in the world. </p>
-				<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="Time Capsule dedicated" width="425" height="319" />
-					<br />The Honourable David Anderson, former Minister of Environment with His
-						Worship, Mayor Ray Rice of Esquimalt and Jack Gale of the Esquimalt Graving
-						Dock at the rededication ceremony, July 1, 2002.</div>
-				<h2>Articles</h2>
-				<p>by Leah Prentice</p>
-				<ul>
-					<li><a href="his/article-eng.html">QE II Article</a>&nbsp;&nbsp;(June 2002)</li>
-				</ul>
-				<h2>Photographs</h2>
-				<p>Select a year:</p>
-				<ul>
-					<li><a href="his/1921-eng.html">1921&nbsp;- 1923</a></li>
-					<li><a href="his/1925-eng.html">1925</a></li>
-					<li><a href="his/1926-eng.html">1926</a></li>
-					<li><a href="his/1927-eng.html">1927</a></li>
-				</ul>
-			</div>
+		</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
-			<!-- TWO COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE DE DEUX COLONNES -->
+			<!-- ONE COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE D'UNE COLONNE -->
 			<!-- FOOTER BEGINS | DEBUT DU PIED DE LA PAGE -->
 			<div class="footer">
 				<div class="footerline"></div>
@@ -140,7 +106,6 @@
 			</div>
 			<!-- FOOTER ENDS | FIN DU PIED DE LA PAGE -->
 		</div>
-	</div>
 </div>
 </body>
 </html>
