--- a/dimensions2-fra.html
+++ b/dimensions2-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>1921 - 1923 - CSE - TPSGC</title>
+<title>Dimensions du bassin - CSE - TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -14,8 +14,8 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="1921 - 1923 - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Histoire" />
+<meta name="dc.title" content="Dimensions du bassin - CSE - TPSGC" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Mesure" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
@@ -31,17 +31,17 @@
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
-<meta name="description" content="Historique de la cale seche d'Esquimalt" />
-<meta name="keywords" content="cale seche d'Esquimalt, historique" />
+<meta name="description" content="Le bassin de mise en cale seche d'Esquimalt mesure 357,5 metres sur 38,4 metres - soit environ 1 200 pieds de longueur sur 135 de largeur. La jetee d'embarquement nord mesure 305 metres de longueur (1 000 pieds), avec une profondeur d'eau de 10 metres (30 pieds) à maree basse. Les installations comptent egalement une zone mouillage de 305 metres le long du quai sud." />
+<meta name="keywords" content="cale seche d'Esquimalt, dimensions" />
 
 <meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
 <!-- FIN DES METADONNEES | METADATA ENDS -->
 <!-- DEBUT DES CSS DU GABARIT TPSGC | PWGSC TEMPLATE CSS BEGIN -->
 <link href="/clf20/css/base.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/2col.css" media="screen, print" rel="stylesheet" type="text/css" />
 <style type="text/css" media="all">
 @import url(/clf20/css/base2.css);
 </style>
+<!-- TEMPLATE SCRIPTS/CSS END | FIN DES SCRIPTS/CSS DU GABARIT -->
 <!-- PROGRESSIVE ENHANCEMENT BEGINS | DEBUT DE L'AMELIORATION PROGRESSIVE -->
 <script src="/clf20/scripts/pe-ap.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -54,11 +54,14 @@
 	/* ]]> */
 	</script>
 <!-- PROGRESSIVE ENHANCEMENT ENDS | FIN DE L'AMELIORATION PROGRESSIVE -->
+<!-- CUSTOM SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS PERSONNALISES -->
 <link href="/clf20/css/base-institution.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/clf20/css/institution.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/pac/cse-egd/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
+<!-- CUSTOM SCRIPTS/CSS END | FIN DES SCRIPTS/CSS PERSONNALISES -->
+<!-- TEMPLATE PRINT CSS BEGINS | DEBUT DU CSS DU GABARIT POUR L'IMPRESSION -->
 <link href="/clf20/css/pf-if.css" rel="stylesheet" type="text/css" />
-<!-- FIN DES CSS DU GABARIT TPSGC | PWGSC TEMPLATE CSS END -->
+<!-- TEMPLATE PRINT CSS ENDS | FIN DU CSS DU GABARIT POUR L'IMPRESSION -->
 </head>
 <body>
 <div class="page">
@@ -69,40 +72,26 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; 1921-1923</p>
+			&gt;&nbsp;Dimensions du bassin</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
-		<div class="colLayout">
-			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
-			<!-- DEBUT DU MENU LATERAL GAUCHE | LEFT SIDE MENU BEGINS -->
-			<div class="left">
-				<!--#include virtual="/clf20/ssi/left-menu-gauche1-fra.html"-->
-				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-fra.html"-->
-				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-fra.html"-->
-			</div>
-			<!-- FIN DU MENU LATERAL GAUCHE | LEFT SIDE MENU ENDS -->
-			<!-- DEBUT DU CONTENU | CONTENT BEGINS -->
+		
+		<!-- ONE COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE D'UNE COLONNE -->
+	<!-- CONTENT BEGINS | DEBUT DU CONTENU --> 
+	<div class="center">	
+		<div class="option2">
+			<h1><a name="cont" id="cont">
+		<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
+			Dimensions du bassin
+		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
+			</a></h1>
+			
+		<img src="images/dimensions.gif" title="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." alt="" width="740" style="width: 740px; " />
 
-			<div class="center">
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Historique
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
-				<div class="option4">
-					<h2>1921&nbsp;- 1923</h2>
-					<img src="../images/historique_history/1921_1.jpg" alt="Vue de la cale en direction ouest" width="300" height="246" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1921_2.jpg" alt="Excavation dans le roc" width="300" height="243" /> </div>
-				<p>Choisir une ann&eacute;e&nbsp;:</p>
-				<ul>
-					<li><a href="1921-fra.html">1921&nbsp;- 1923</a></li>
-					<li><a href="1925-fra.html">1925</a></li>
-					<li><a href="1926-fra.html">1926</a></li>
-					<li><a href="1927-fra.html">1927</a></li>
-				</ul>
+				</div>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
-			<!-- FIN DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT ENDS -->
+			<!-- ONE COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE D'UNE COLONNE -->
 			<!-- DEBUT DU PIED DE LA PAGE | FOOTER BEGINS -->
 			<div class="footer">
 				<div class="footerline"></div>
@@ -118,7 +107,7 @@
 			</div>
 			<!-- FIN DU PIED DE LA PAGE | FOOTER ENDS -->
 		</div>
-	</div>
+
 </div>
 </body>
 </html>
