--- a/emp-loc-fra.html
+++ b/emp-loc-fra.html
@@ -31,7 +31,7 @@
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
-<meta name="description" content="La Cale seche d'Esquimalt est situee a Esquimalt, au 825 Admirals Road - a 15 minutes au nord de Victoria, a l'extremite sud de l'ile de Vancouver." />
+<meta name="description" content="La Cale s&egrave;che d'Esquimalt est situee a Esquimalt, au 825 Admirals Road - a 15 minutes au nord de Victoria, a l'extremite sud de l'ile de Vancouver." />
 <meta name="keywords" content="cale seche d'Esquimalt, emplacement, Victoria, Colombie Britannique" />
 
 <meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
@@ -89,11 +89,11 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>La Cale s&egrave;che d'Esquimalt est situ&eacute;e &agrave; Esquimalt,
-					au 825 Admirals Road &ndash; &agrave; 15 minutes au nord de Victoria, &agrave; l'extr&eacute;mit&eacute; sud
-					de l'île de Vancouver. </p>
+					au 825&nbsp;Admirals Road &ndash; &agrave; 15&nbsp;minutes au nord de Victoria, &agrave; l'extr&eacute;mit&eacute; sud
+					de l'&icirc;le de Vancouver. </p>
 				<p>Victoria est situ&eacute;e &agrave; proximit&eacute; des
 					villes portuaires de Vancouver (Colombie-Britannique) et de Seattle (Washington),
-					et &agrave; environ 1&nbsp;200 km (600 milles) de San Francisco. </p>
+					et &agrave; environ 1&nbsp;200&nbsp;km (600&nbsp;milles) de San Francisco. </p>
 				<p>Ce port &laquo;&nbsp;toutes saisons&nbsp;&raquo; procure un acc&egrave;s
 					strat&eacute;gique &agrave; l'Alaska et aux pays riverains du Pacifique.</p>
 				<div class="option4">
