--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -96,7 +96,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>These links are provided solely for the convenience of Public Works and Government
-					of Canada (PWGSC) website users. <acronym title="Public Works and Government Services Canada">PWGSC</acronym> is not responsible for the information
+					of Canada (<acronym title='Public Works and Government Services Canada'>PWGSC</acronym>) website users. <acronym title="Public Works and Government Services Canada">PWGSC</acronym> is not responsible for the information
 					found on them. Some of these links are to organizations or other entities that
 					are not subject to the <em>Official Languages Act</em>. Users should be aware that some
 					information from other sources may be available in only one official language.</p>
@@ -106,7 +106,7 @@
 				<dl>
 
 					<dt>Tel:</dt>
-					<dd>250-386-4172 </dd>
+					<dd>250-386-4172&nbsp;</dd>
 
 
 					<dt>Fax:</dt>
@@ -168,7 +168,7 @@
 				<dl>
 
 					<dt>Tel:</dt>
-					<dd>250-383-6440 </dd>
+					<dd>250-383-6440&nbsp;</dd>
 
 
 					<dt>Fax:</dt>
@@ -246,7 +246,7 @@
 
 
 					<dt>Work Force:</dt>
-					<dd>5 - 20</dd>
+					<dd>5&nbsp;- 20</dd>
 
 
 					<dt>Specialty:</dt>
@@ -270,7 +270,7 @@
 
 
 					<dt>Fax:</dt>
-					<dd>250-995-6599 </dd>
+					<dd>250-995-6599&nbsp;</dd>
 
 
 					<dt>Type of Work:</dt>
