--- a/entreprises-firms-fra.html
+++ b/entreprises-firms-fra.html
@@ -34,7 +34,7 @@
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
-<meta name="description" content="Cale seche d'Esquimalt - Entreprises de radoub" />
+<meta name="description" content="Cale s&egrave;che d'Esquimalt - Entreprises de radoub" />
 <meta name="keywords" content="cale seche d'Esquimalt, entreprises de radoub" />
 
 <meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
@@ -93,7 +93,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>Ces liens sont destin&eacute;s aux usagers du site web de Travaux publics
-					et Services gouvernementaux Canada (TPSGC). <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> n'est pas responsable
+					et Services gouvernementaux Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>). <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> n'est pas responsable
 					de l'information qu'ils contiennent. Les liens qui donnent acc&egrave;s &agrave; des
 					organismes ou entit&eacute;s qui ne sont pas assujettis &agrave; la <em>Loi
 					sur les langues officielles</em> peuvent &ecirc;tre pr&eacute;sent&eacute;s
@@ -104,7 +104,7 @@
 				<dl>
 
 					<dt>T&eacute;l.&nbsp;:</dt>
-					<dd>250-386-4172 </dd>
+					<dd>250-386-4172&nbsp;</dd>
 
 
 					<dt>Fax&nbsp;:</dt>
@@ -167,7 +167,7 @@
 				<dl>
 
 					<dt>T&eacute;l.&nbsp;:</dt>
-					<dd>250-383-6440 </dd>
+					<dd>250-383-6440&nbsp;</dd>
 
 
 					<dt>Fax&nbsp;:</dt>
@@ -248,7 +248,7 @@
 
 
 					<dt>Nombre d'employ&eacute;s&nbsp;:</dt>
-					<dd>5 - 20</dd>
+					<dd>5&nbsp;- 20</dd>
 
 
 					<dt>Sp&eacute;cialisations&nbsp;:</dt>
@@ -273,7 +273,7 @@
 
 
 					<dt>Fax&nbsp;:</dt>
-					<dd>250-995-6599 </dd>
+					<dd>250-995-6599&nbsp;</dd>
 
 
 					<dt>Services offerts&nbsp;:</dt>
