--- a/env/cranes-grues-fra.html
+++ b/env/cranes-grues-fra.html
@@ -108,7 +108,7 @@ Cordialement,
 <p>
 David A. Latoski<br />
 Directeur de l&#8217;exploitation<br />
-Cale s&#232;che d&#8217;Esquimalt
+Cale s&egrave;che d'Esquimalt
 </p>
 
 			</div>
