--- a/env/interet-interest-fra.html
+++ b/env/interet-interest-fra.html
@@ -92,10 +92,10 @@
 <!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<ul>
-					<li><a href="simple-fra.html">Une idée toute simple : un rideau de bulles d'air permet de sauver des poissons et des phoques, et d'épargner un temps précieux</a> (2003)</li>
-					<li><a href="ecocivisme-environment-fra.html">La cale sèche d'Esquimalt : un exemple d'écocivisme</a> (2002) </li>
-					<li><a href="barrage-boom-fra.html">La cale sèche d'Esquimalt fait barrage aux déversements de pétrole</a> (2001) </li>
-					<li><a href="voie-way-fra.html"><acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> : chef de file en voie vers la certification <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</a>  (2001)</li>
+					<li><a href="simple-fra.html">Une id&eacute;e toute simple&nbsp;: un rideau de bulles d'air permet de sauver des poissons et des phoques, et d'&eacute;pargner un temps pr&eacute;cieux</a> (2003)</li>
+					<li><a href="ecocivisme-environment-fra.html">La cale s&egrave;che d'Esquimalt&nbsp;: un exemple d'&eacute;cocivisme</a> (2002) </li>
+					<li><a href="barrage-boom-fra.html">La cale s&egrave;che d'Esquimalt fait barrage aux d&eacute;versements de p&eacute;trole</a> (2001) </li>
+					<li><a href="voie-way-fra.html"><acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: chef de file en voie vers la certification <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</a>  (2001)</li>
 				</ul>
 			</div>
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
