--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -31,7 +31,7 @@
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
-<meta name="description" content="La Cale seche d'Esquimalt veut etre le meilleur chantier naval de la cote ouest d'Amerique du Nord. Conscients que l'atteinte de cet objectif passe obligatoirement par la protection de l'environnement, nous nous sommes engages a tout mettre en oeuvre pour que nos activites n'aient pas d'impacts negatifs sur l'environnement et sur la sante et la securite du personnel et de la communaute riveraine." />
+<meta name="description" content="La Cale s&egrave;che d'Esquimalt veut etre le meilleur chantier naval de la cote ouest d'Amerique du Nord. Conscients que l'atteinte de cet objectif passe obligatoirement par la protection de l'environnement, nous nous sommes engages a tout mettre en oeuvre pour que nos activites n'aient pas d'impacts negatifs sur l'environnement et sur la sante et la securite du personnel et de la communaute riveraine." />
 <meta name="keywords" content="cale seche d'Esquimalt, ISO 14001, environnement, gestion, programmes, sant&eacute;, s&eacute;curit&eacute;" />
 
 <meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
@@ -98,7 +98,7 @@
 					<p><strong>La Cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
 						de cet objectif passe obligatoirement par la gestion
 						de l'environnement. La mise en &oelig;uvrue d'un syst&egrave;me de gestion de
-						l'environnement certifi&eacute; <acronym title="International Standards Organization">ISO</acronym> 14001 traduit notre engagement &agrave; g&eacute;rer
+						l'environnement certifi&eacute; <acronym title="International Standards Organization">ISO</acronym> 14001&nbsp;traduit notre engagement &agrave; g&eacute;rer
 						les r&eacute;percussions que nos activit&eacute;s ont ou pourraient
 						avoir sur l'environnement. </strong></p>
 				</div>
