--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -139,7 +139,7 @@
 			<p>Si vous avez des questions ou des pr&eacute;occupations &agrave; l'&eacute;gard
 				de la Politique environnementale ou des programmes environnementaux de la
 				cale s&egrave;che d'Esquimalt, veuillez communiquer avec le coordonnateur
-				environnemental :</p>
+				environnemental&nbsp;:</p>
 	
 		</div>
 
