--- a/his/1921-eng.html
+++ b/his/1921-eng.html
@@ -73,7 +73,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; 1921-1923 </p>
+			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; 1921-1923&nbsp;</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
@@ -93,12 +93,12 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<div class="option4">
-					<h2>1921 - 1923</h2>
+					<h2>1921&nbsp;- 1923</h2>
 					<img src="../images/historique_history/1921_1.jpg" alt="Head of dock looking West" width="300" height="246" style="padding-bottom:10px;" /><br />
 					<img src="../images/historique_history/1921_2.jpg" alt="Excavation on rock bottom floor" width="300" height="243" /> </div>
 				<p>Select a year:</p>
 				<ul>
-					<li><a href="1921-eng.html">1921 - 1923</a></li>
+					<li><a href="1921-eng.html">1921&nbsp;- 1923</a></li>
 					<li><a href="1925-eng.html">1925</a></li>
 					<li><a href="1926-eng.html">1926</a></li>
 					<li><a href="1927-eng.html">1927</a></li>
