--- a/his/article-eng.html
+++ b/his/article-eng.html
@@ -97,10 +97,10 @@
 				<p><em>Loose Lips Sink Ships</em></p>
 				<p>Longtime Esquimalt resident Ken Moffat was just five-years-old when the
 					massive passenger liner Queen Elizabeth crept into Esquimalt Harbour in
-					1942 but he remembers the moment like it was yesterday. </p>
+					1942&nbsp;but he remembers the moment like it was yesterday. </p>
 				<p>The QE was at the Esquimalt Graving Dock to be secretly refitted from
 					a passenger liner to a troopship capable of carrying a full army division
-					of 15,000 men. This invaluable Allied asset was one of the most attractive
+					of 15,000&nbsp;men. This invaluable Allied asset was one of the most attractive
 					targets in the world and almost no one knew with certainty where she was.
 					To have sunk her would have been a massive victory for the enemy. In order
 					to prevent being attacked by surprise at night, naval authorities urged
