--- a/his/article-fra.html
+++ b/his/article-fra.html
@@ -93,7 +93,7 @@
 				<p><em>Un secret bien gard&eacute;</em></p>
 				<p>Ken Moffat, originaire d'Esquimalt, n'avait que cinq ans lorsque le tr&egrave;s
 					majestueux paquebot Queen Elizabeth fit son entr&eacute;e dans le port d'Esquimalt.
-					C'&eacute;tait en 1942 et il se rappelle de cette journ&eacute;e comme si
+					C'&eacute;tait en 1942&nbsp;et il se rappelle de cette journ&eacute;e comme si
 					c'&eacute;tait hier. </p>
 				<p>Le QE avait &eacute;t&eacute; amen&eacute; &agrave; la cale s&egrave;che
 					d'Esquimalt dans le plus grand secret, afin d'&ecirc;tre transform&eacute; en
@@ -119,7 +119,7 @@
 					un rayon de lune. Nous sommes rest&eacute;s l&agrave; environ cinq minutes
 					avant qu'un policier militaire ne vienne nous avertir de nous en aller.&nbsp;&raquo; </p>
 				<p>Les mesures de s&eacute;curit&eacute; furent efficaces&nbsp;: apr&egrave;s
-					treize jours de travaux 24 heures sur 24, le QE repartit transform&eacute; en
+					treize jours de travaux 24&nbsp;heures sur 24, le QE repartit transform&eacute; en
 					navire de transport militaire - et tout Victoria poussa un soupir de soulagement. </p>
 				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="S.S. Queen Elizabeth, 1942" width="349" height="418" /></div>
 			</div>
