--- a/his/ensemble-eng.html
+++ b/his/ensemble-eng.html
@@ -94,7 +94,7 @@
 					History<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<h2>Ensemble Article</h2>
-				<p><em>What Happens Once Every 75 Years?</em><br />
+				<p><em>What Happens Once Every 75&nbsp;Years?</em><br />
 				Leah Prentice</p>
 				<div style="clear:right;"> <img src="../images/ensemble/1.jpg" width="113" height="150" alt="Canada Day Open House" style="float:right; padding-left:10px; padding-bottom:10px; padding-bottom:10px;"/>
 					<p>Last year, the Esquimalt Graving Dock celebrated its 75th anniversary.
@@ -119,14 +119,14 @@
 				<div style="clear:right;"> <img src="../images/ensemble/5.jpg" width="150" height="113" alt="Pumphouse Tours" style="float:right; padding-left:10px; padding-bottom:10px;"/>
 					<p>Doug Ferrier, an Implementation Officer with Professional and Technical
 						services shows-off the Pumphouse - a heritage building with original one-of-a-kind
-					1927 machinery.</p>
+					1927&nbsp;machinery.</p>
 				</div>
 				<div style="clear:right;"> <img src="../images/ensemble/6.jpg" width="150" height="113" alt="Former employees visit" style="float:right; padding-left:10px; padding-bottom:10px;"/>
 					<p>Many former employees came back for a visit.</p>
 				</div>
 				<div style="clear:right;"> <img src="../images/ensemble/11.jpg" width="150" height="113" alt="Face painting and a hot dog barbeque" style="float:right; padding-left:10px; padding-bottom:10px;"/>
-					<p>PWGSC volunteers helped with carnival games, face painting and a hotdog
-					barbeque by donation that helped raise over $1,300 for the United Way.</p>
+					<p><acronym title='Public Works and Government Services Canada'>PWGSC</acronym> volunteers helped with carnival games, face painting and a hotdog
+					barbeque by donation that helped raise over&nbsp;$1,300&nbsp;for the United Way.</p>
 				</div>
 				<div style="clear:right;"> <img src="../images/ensemble/12.jpg" width="150" height="129" alt="Carnival Games" style="float:right; padding-left:10px; padding-bottom:10px;"/>
 					<p>Bob Graves of Professional and Technical Services (far left, red shirt),
