--- a/his/ensemble-fra.html
+++ b/his/ensemble-fra.html
@@ -31,7 +31,7 @@
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
-<meta name="description" content="75e anniversaire de la Cale seche d'Esquimalt." />
+<meta name="description" content="75e anniversaire de la Cale s&egrave;che d'Esquimalt." />
 <meta name="keywords" content="cale seche d'Esquimalt, historique" />
 
 <meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
@@ -90,7 +90,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<h2>Article paru dans <em>Ensemble</em></h2>
-				<p><em>Quoi de neuf depuis 75 ans?</em><br />
+				<p><em>Quoi de neuf depuis 75&nbsp;ans?</em><br />
 					Leah Prentice</p>
 				<div style="clear:right;"> <img src="../images/ensemble/1.jpg" width="113" height="150" alt="Journ&eacute;e d'accueil lors de la F&ecirc;te du Canada" style="float:right; padding-left:10px; padding-bottom:10px; padding-bottom:10px;"/>
 					<p>L'an dernier, la Cale s&egrave;che d'Esquimalt a c&eacute;l&eacute;br&eacute;
@@ -129,7 +129,7 @@
 					<p>Plusieurs anciens employ&eacute;s &eacute;taient de la partie.</p>
 				</div>
 				<div style="clear:right;"> <img src="../images/ensemble/11.jpg" width="150" height="113" alt="Activités de grimage et stand de hotdogs sur barbecue" style="float:right; padding-left:10px; padding-bottom:10px;"/>
-					<p>Des b&eacute;n&eacute;voles de TPSGC ont organis&eacute; des jeux, des
+					<p>Des b&eacute;n&eacute;voles de <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym> ont organis&eacute; des jeux, des
 						activit&eacute;s de grimage et un stand de hotdogs sur barbecue, activit&eacute;s
 						qui ont permis de r&eacute;colter plus de 1&nbsp;300&nbsp;$ pour United
 						Way.</p>
