--- a/index-fra.html
+++ b/index-fra.html
@@ -31,7 +31,7 @@
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
-<meta name="description" content="La Cale seche d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
+<meta name="description" content="La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
 <meta name="keywords" content="cale seche d'Esquimalt, " />
 
 <meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
@@ -91,7 +91,7 @@
 			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
 
 			<div class="center">
-				<div class="main1"><img src="images/dock-cale.jpg" title="Cale sèche d'Esquimalt vue est" alt="Cale sèche d'Esquimalt vue est" width="388" height="250" style="width: 388px; height: 250px;" />
+				<div class="main1"><img src="images/dock-cale.jpg" title="Cale s&egrave;che d'Esquimalt vue est" alt="Cale s&egrave;che d'Esquimalt vue est" width="388" height="250" style="width: 388px; height: 250px;" />
 					<h1 id="cont">
 						<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 						Cale s&egrave;che d'Esquimalt - Bienvenue
@@ -99,7 +99,7 @@
 						</h1>
 					<p>La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de
 						radoub commerciale de la c&ocirc;te Ouest des Am&eacute;riques. Nous sommes <a href="emp-loc-fra.html">situ&eacute;s</a> dans
-						un port ouvert &agrave; l'ann&eacute;e longue, sur l'île de Vancouver, &agrave; proximit&eacute; des
+						un port ouvert &agrave; l'ann&eacute;e longue, sur l'&icirc;le de Vancouver, &agrave; proximit&eacute; des
 						voies d'acc&egrave;s
 						&agrave; l'Alaska et aux pays riverains du Pacifique. </p>
 					<p>Nos installations de calibre mondial sont &eacute;quip&eacute;es notamment
@@ -116,9 +116,9 @@
 				<div class="option2">
 					<h2>Qui sommes-nous?</h2>
 					<p>La CSE est une division du minist&egrave;re f&eacute;d&eacute;ral des
-						Travaux publics et des Services gouvernementaux du Canada (TPSGC).</p>
-					<p>Les services de r&eacute;paration de navires sont assur&eacute;s 24 heures
-						sur 24, 7 jours sur 7 et 365 jours par ann&eacute;e. Nous proposons toute
+						Travaux publics et des Services gouvernementaux du Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>).</p>
+					<p>Les services de r&eacute;paration de navires sont assur&eacute;s 24&nbsp;heures
+						sur 24, 7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. Nous proposons toute
 						la gamme des <a href="ser/reparation-repair-fra.html">services de r&eacute;paration
 						navale</a>, avec tous les &eacute;quipements requis, notamment nos nouveaux logements
 						pour stabilisateurs facilitant les travaux d'entretien et de r&eacute;paration
