--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- VERSION 1.0 DU GABARIT TPSGC | PWGSC TEMPLATE VERSION 1.0 -->
 	<!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 	<!-- DEBUT DU TITRE FRANCAIS / ANGLAIS | FRENCH / ENGLISH TITLE BEGINS -->
-	<title>Cale s&egrave;che e'Esquimalt | Esquimalt Graving Dock</title>
+	<title>Bienvenue - Cale s&egrave;che d'Esquimalt - TPSGC | Welcome - Esquimalt Graving Dock - PWGSC</title> 
 	<!-- FIN DU TITRE FRANCAIS / ANGLAIS | FRENCH / ENGLISH TITLE ENDS   -->
 
 	<!-- DEBUT DES METADONNEES BILINGUES | BILINGUAL METADATA BEGINS -->
@@ -13,7 +13,7 @@
 	<link rel="schema.dc" href="http://purl.org/dc/elements/1.1/"  />
 	<link rel="schema.dc" href="http://purl.org/dc/terms/ " />
 
-	<meta name="dc.title" content="Cale s&egrave;che e'Esquimalt | Esquimalt Graving Dock" />
+	<meta name="dc.title" content="Bienvenue - Cale s&egrave;che d'Esquimalt - TPSGC | Welcome - Esquimalt Graving Dock - PWGSC" />
 	<meta name="dc.subject" scheme="gccore" content="Ships; Wharf" />
 	<meta name="dc.subject" scheme="gccore" content="Navire; Quai" />
 
@@ -29,7 +29,7 @@
 	<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
 	<meta name="description" content="The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. EGD is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are located in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim." />
-	<meta name="description" content="La Cale seche d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
+	<meta name="description" content="La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
 	<meta name="keywords" content="Esquimalt Graving Dock" />
 	<meta name="keywords" content="cale seche d'Esquimalt" />
 
