--- a/merci-thankyou-fra.html
+++ b/merci-thankyou-fra.html
@@ -89,8 +89,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>Vos commentaires ont &eacute;t&eacute; envoy&eacute;s.</p>
-				<p>Merci de vous &ecirc;tre adress&eacute;s &agrave; la <a href="/pac/cse-egd/index-fra.html">Cale
-						s&egrave;che d'Esquimalt</a> (Travaux publics et Services gouvernementaux
+				<p>Merci de vous &ecirc;tre adress&eacute;s &agrave; la <a href="/pac/cse-egd/index-fra.html">Cale s&egrave;che d'Esquimalt</a> (Travaux publics et Services gouvernementaux
 						Canada). Nous vous r&eacute;pondrons d&egrave;s que possible.</p>
 			</div>
 
