--- a/rendement-performance-eng.html
+++ b/rendement-performance-eng.html
@@ -99,10 +99,10 @@
 				at <a href="mailto:jim.milne@pwgsc.gc.ca">Jim.Milne@pwgsc.gc.ca</a></p>
 				<hr /> -->
 				<p>At the Esquimalt Graving Dock (EGD), Public Works and Government Services
-					Canada (PWGSC) will provide in a reasonable manner:</p>
+					Canada (<acronym title='Public Works and Government Services Canada'>PWGSC</acronym>) will provide in a reasonable manner:</p>
 				<ul>
 					<li>administration services, to reserve services or space for vessels</li>
-					<li>notification of uses within 48 hours of changes to service/space that
+					<li>notification of uses within 48&nbsp;hours of changes to service/space that
 						may affect the safe and efficient operations of the facility;</li>
 					<li>an Emergency Response Plan for the <acronym title="Esquimalt Graving Dock">EGD</acronym>; and</li>
 					<li>an approved marine facility security plan and a qualified Marine Facility
@@ -114,10 +114,10 @@
 					<li>Reservations and confirmed bookings were provided in a reasonable manner
 						when requested.</li>
 					<li>Notifications of changes to service and/or capacity of the facility
-						will be provided within 48 hours after first noting the change in condition
+						will be provided within 48&nbsp;hours after first noting the change in condition
 						of the service or capacity at least 90% of the time.</li>
 					<li>The EGD Emergency Response Plan will be reviewed and updated, if required,
-						every 2 years.</li>
+						every 2&nbsp;years.</li>
 					<li>The EGD will continue to have a valid Statement of Compliance of Marine
 						Facility or a Port certificate and that all regulated security audits have
 						been completed.</li>
