--- a/ser/pompes-pumps-fra.html
+++ b/ser/pompes-pumps-fra.html
@@ -91,7 +91,7 @@
 					</h1>
 				<p> Le personnel du service des pompes est responsable, entre autres choses, <a href="#inonder-fill">d'inonder
 						et d'ass&eacute;cher le bassin de mise en cale s&egrave;che</a>. Il offre
-						aussi des services dans les domaines suivants :</p>
+						aussi des services dans les domaines suivants&nbsp;:</p>
 				<ul>
 					<li><a href="#elec">&Eacute;lectricit&eacute;</a></li>
 					<li>M&eacute;canique</li>
@@ -115,9 +115,9 @@
 				<a name="inonder-fill" id="inonder-fill"></a>
 				<h2>Inondation et ass&egrave;chement du bassin de mise en cale s&egrave;che</h2>
 				<p>Pour ass&eacute;cher le bassin, nous utilisons trois pompes centrifuges
-					parall&egrave;les &agrave; double turbine de 54 po ayant chacune un d&eacute;bit
-					nominal de 66 000 gal/min et deux pompes auxiliaires submerg&eacute;es de
-					20 po ayant chacune un d&eacute;bit nominal 9 000 gal/min. Nous utilisons
+					parall&egrave;les &agrave; double turbine de 54&nbsp;po ayant chacune un d&eacute;bit
+					nominal de 66&nbsp;000&nbsp;gal/min et deux pompes auxiliaires submerg&eacute;es de
+					20&nbsp;po ayant chacune un d&eacute;bit nominal 9&nbsp;000&nbsp;gal/min. Nous utilisons
 					aussi deux pompes submersibles de service intense avec un syst&egrave;me
 					d'&eacute;cluse hydraulique.</p>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
@@ -125,7 +125,7 @@
 				<a name="comp" id="comp"></a>
 				<h2>Air comprim&eacute;</h2>
 				<p> Le circuit d'air comprim&eacute; est aliment&eacute; par des compresseurs
-					d&eacute;bitant 1&nbsp;000 pi<sup>3</sup>/min. Le circuit d'air comprim&eacute; et
+					d&eacute;bitant 1&nbsp;000&nbsp;pi<sup>3</sup>/min. Le circuit d'air comprim&eacute; et
 					l'&eacute;quipement de distribution comprennent une conduite principale
 					et des conduites de distribution de quatre pouces au quai de d&eacute;barquement
 					nord, &agrave; la jet&eacute;e sud et au bassin de mise en cale s&egrave;che.</p>
@@ -134,26 +134,26 @@
 				<a name="elec" id="elec"></a>
 				<h2>&Eacute;lectricit&eacute;</h2>
 				<p> L'installation &eacute;lectrique du chantier comprend des r&eacute;partiteurs
-					de 1500 A, des r&eacute;partiteurs 480 V, 400 A et des prises doubles de
-					120 V ainsi que des raccords pour le t&eacute;l&eacute;phone et la t&eacute;l&eacute;vision.
+					de 1500&nbsp;A, des r&eacute;partiteurs 480&nbsp;V, 400&nbsp;A et des prises doubles de
+					120&nbsp;V ainsi que des raccords pour le t&eacute;l&eacute;phone et la t&eacute;l&eacute;vision.
 					L'alimentation de secours est assur&eacute;e par un groupe &eacute;lectrog&egrave;ne
-					diesel de 475 VA.</p>
+					diesel de 475&nbsp;VA.</p>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
 				<a name="usees-sewage" id="usees-sewage"></a>
 				<h2>Eaux us&eacute;es</h2>
 				<p>Les eaux us&eacute;es sont recueillies par une conduite principale de
-					4 po et sont refoul&eacute;es par une pompe dans une station de pompage.
-					Le drainage du site est assur&eacute; par une conduite de 24 po reli&eacute;e &agrave; des
+					4&nbsp;po et sont refoul&eacute;es par une pompe dans une station de pompage.
+					Le drainage du site est assur&eacute; par une conduite de 24&nbsp;po reli&eacute;e &agrave; des
 					bassins de captage et &agrave; des &eacute;gouts.</p>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a></div>
 				<h2>Personnel</h2>
 				<p>Le personnel du chantier offre divers services, notamment la mise en place
 					des tins, les manoeuvres d'entr&eacute;e/sortie des navires et l'entretien
-					des terrains (19 hectares).</p>
+					des terrains (19&nbsp;hectares).</p>
 				<div style="text-align: center;"><img src="../images/personnel-staff.jpg" width="300" height="225" alt="B&acirc;timent du personnel du chantier" /></div>
-				<p><i>Source : Harbour &amp; Shipping Journal, Juillet 2002, Volume 85, n<sup>o</sup> 7</i> </p>
+				<p><i>Source&nbsp;: Harbour &amp; Shipping Journal, Juillet 2002, Volume 85, n<sup>o</sup> 7</i> </p>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
