--- a/ser/reparation-repair-eng.html
+++ b/ser/reparation-repair-eng.html
@@ -97,14 +97,14 @@
 				<p> The Dock (which has a capacity of up to 100,000DWT), is serviced by three
 					heavy-lift electrically-driven, rail-mounted travelling cranes:</p>
 				<ul>
-					<li> Krupp Level Luffing Crane - 150-tonne capacity at 35 metres and a 100-tonne
-						capacity at 50 metres. This crane has a main hook capable of lifting entire
-						vessels onto land for refit or repair and an auxiliary hook with a 15 tonne
+					<li> Krupp Level Luffing Crane - 150-tonne capacity at 35&nbsp;metres and a 100-tonne
+						capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire
+						vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne
 						capacity generally used to transport materials onto the vessel. </li>
-					<li> Colby Hammerhead Crane - 45-tonne capacity at 30 metres. This crane
+					<li> Colby Hammerhead Crane - 45-tonne capacity at 30&nbsp;metres. This crane
 						has a main hook capable of 39-tonnes and a 9-tonne capacity auxiliary. </li>
 					<li> Ebco Level Luffing Crane - This quick maneuvering crane travels the
-						full length of the Dock and has a 30-tonne capacity at 35 metres. </li>
+						full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres. </li>
 				</ul>
 				<p>In addition, the Esquimalt Graving Dock has two mobile cranes - the 20-tonne
 					Grove and a 12-tonne Hyster with boom lowering characteristics.</p>
