--- a/ser/reparation-repair-fra.html
+++ b/ser/reparation-repair-fra.html
@@ -90,25 +90,25 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<img src="../images/grue-crane.jpg" width="193" height="280" alt="Grue" style="float: right; padding: 10px;" />
-				<p> La cale s&egrave;che (dont la capacit&eacute; est de 100 000 tonnes de
+				<p> La cale s&egrave;che (dont la capacit&eacute; est de 100&nbsp;000&nbsp;tonnes de
 					port en lourd) est munie de trois ponts roulants &eacute;lectriques mont&eacute;s
 					sur rails pour charges lourdes:</p>
 				<ul>
-					<li>Grue &agrave; vol&eacute;e variable Krupp - capacit&eacute; de 150 tonnes &agrave; 35
-						m&egrave;tres et de 100 tonnes &agrave; 50 m&egrave;tres. &Eacute;quip&eacute;e
+					<li>Grue &agrave; vol&eacute;e variable Krupp - capacit&eacute; de 150&nbsp;tonnes &agrave; 35
+						m&egrave;tres et de 100&nbsp;tonnes &agrave; 50&nbsp;m&egrave;tres. &Eacute;quip&eacute;e
 						d'un crochet principal pouvant soulever un navire jusque sur terre pour
 						permettre des travaux de r&eacute;paration et de r&eacute;vision et d'un
-						crochet secondaire d'une capacit&eacute; de 15 tonnes habituellement utilis&eacute; pour
+						crochet secondaire d'une capacit&eacute; de 15&nbsp;tonnes habituellement utilis&eacute; pour
 						transporter des mat&eacute;riaux sur le navire. </li>
-					<li> Grue marteau Colby - capacit&eacute; de 45 tonnes &agrave; 30 m&egrave;tres.
-						Cette grue a un crochet principal pouvant soulever 39 tonnes et un second
-						crochet d'une capacit&eacute; de 9 tonnes. </li>
+					<li> Grue marteau Colby - capacit&eacute; de 45&nbsp;tonnes &agrave; 30&nbsp;m&egrave;tres.
+						Cette grue a un crochet principal pouvant soulever 39&nbsp;tonnes et un second
+						crochet d'une capacit&eacute; de 9&nbsp;tonnes. </li>
 					<li>Grue &agrave; vol&eacute;e variable Ebco - grue rapide d'une capacit&eacute; de
-						30 tonnes &agrave; 35 m&egrave;tres pouvant se d&eacute;placer tout le
+						30&nbsp;tonnes &agrave; 35&nbsp;m&egrave;tres pouvant se d&eacute;placer tout le
 						long de la cale. </li>
 				</ul>
 				<p>La cale s&egrave;che d'Esquimalt poss&egrave;de &eacute;galement deux
-					grues mobiles, une grue Grove d'une capacit&eacute; de 20 tonnes et une
+					grues mobiles, une grue Grove d'une capacit&eacute; de 20&nbsp;tonnes et une
 					grue Hyster &agrave; fl&egrave;che abaissante d'une capacit&eacute; de 12
 				tonnes.</p>
 				<p>Les services de grutage comprennent la fourniture d'une grue mobile et
@@ -128,7 +128,7 @@
 					fin est suffisante pour que la mati&egrave;re abrasive rebondisse assez
 					sur la surface de travail pour &ecirc;tre capt&eacute;e par une gaine de
 					r&eacute;cup&eacute;ration afin d'&ecirc;tre r&eacute;utilis&eacute;e.</p>
-				<p><i>Source : Harbour &amp; Shipping Journal, juillet 2002, volume 85, n<sup>o</sup> 7</i> </p>
+				<p><i>Source&nbsp;: Harbour &amp; Shipping Journal, juillet 2002, volume 85, n<sup>o</sup> 7</i> </p>
 				<p><a href="pompes-pumps-fra.html">Services de chantier et de maintenance</a></p>
 			</div>
 
