--- a/services-fra.html
+++ b/services-fra.html
@@ -31,7 +31,7 @@
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
 
-<meta name="description" content="La Cale seche d'Esquimalt est une entreprise dynamique de reparation navale desservant une clientele nationale et internationale et fonctionnant 24 heures sur 24, 7 jours sur 7 et 365 jours par annee. La CSE offre une gamme complete de services et d'equipements de reparation navale, notamment de nouveaux logements de stabilisateurs." />
+<meta name="description" content="La Cale s&egrave;che d'Esquimalt est une entreprise dynamique de reparation navale desservant une clientele nationale et internationale et fonctionnant 24 heures sur 24, 7 jours sur 7 et 365 jours par annee. La CSE offre une gamme complete de services et d'equipements de reparation navale, notamment de nouveaux logements de stabilisateurs." />
 <meta name="keywords" content="cale seche d'Esquimalt, services" />
 
 <meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
@@ -90,7 +90,7 @@
 					</h1>
 				<p>La Cale s&egrave;che d'Esquimalt est une entreprise dynamique de r&eacute;paration
 					navale desservant une client&egrave;le nationale et internationale et fonctionnant
-					24 heures sur 24, 7 jours sur 7 et 365 jours par ann&eacute;e. La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> offre
+					24&nbsp;heures sur 24, 7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> offre
 					une gamme compl&egrave;te de services et
 					d'&eacute;quipements de r&eacute;paration navale, notamment de nouveaux
 					logements de stabilisateurs.</p>
