--- a/emp-loc-eng.html
+++ b/emp-loc-eng.html
@@ -92,12 +92,12 @@
 					Location
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<p>The Esquimalt Graving Dock is located in Esquimalt at 825 Admirals Road
-					&ndash; 15 minutes north of Victoria on the southern
+				<p>The Esquimalt Graving Dock is located in Esquimalt at 825&nbsp;Admirals Road
+					&ndash; 15&nbsp;minutes north of Victoria on the southern
 					tip of Vancouver Island.</p>
 				<p>Victoria is close to the port cities of
 					Vancouver, British Columbia and Seattle, Washington. It's also about 1,200
-					km, or 600 miles, north of San Francisco, California.</p>
+					km, or 600&nbsp;miles, north of San Francisco, California.</p>
 				<p>The ice free harbour is strategically located near gateways to Alaska
 					and the Pacific Rim.</p>
 				<div class="option4">
