--- a/his/1927-fra.html
+++ b/his/1927-fra.html
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; 1927 </p>
+			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; 1927&nbsp;</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -96,7 +96,7 @@
 
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
-					<li><a href="1921-fra.html">1921 - 1923</a></li>
+					<li><a href="1921-fra.html">1921&nbsp;- 1923</a></li>
 					<li><a href="1925-fra.html">1925</a></li>
 					<li><a href="1926-fra.html">1926</a></li>
 					<li><a href="1927-fra.html">1927</a></li>
