--- a/index-eng.html
+++ b/index-eng.html
@@ -104,7 +104,7 @@
 						Island near gateways to Alaska and the Pacific Rim. </p>
 					<p>Our world class facilities include stabilizer
 							pockets and high-speed heavy lift cranes up
-							to 150 tonnes/165 tons. The Dock can accommodate vessels up to 100,000
+							to 150&nbsp;tonnes/165&nbsp;tons. The Dock can accommodate vessels up to 100,000
 							DWT or about 90% of the world's ships.</p>
 					<p>The EGD is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available to any company or individual</a> on a first-come first-serve basis. All
 							work is carried out by private sector <a href="entreprises-firms-eng.html">ship repair
@@ -112,9 +112,9 @@
 				</div>
 				<div class="option2">
 					<h2>Who We Are</h2>
-					<p>The EGD is a branch of Public Works and Government Services Canada (PWGSC)
+					<p>The EGD is a branch of Public Works and Government Services Canada (<acronym title='Public Works and Government Services Canada'>PWGSC</acronym>)
 						- a Canadian federal government department.</p>
-					<p>Ship repair work takes place 24-hours-a-day, seven days a week, 365 days
+					<p>Ship repair work takes place 24-hours-a-day, seven days a week, 365&nbsp;days
 						a year. The Dock provides a full range of <a href="ser/reparation-repair-eng.html">ship
 						repair services</a> and amenities like our new stabilizer
 						pockets. </p>
