--- a/rendement-performance-fra.html
+++ b/rendement-performance-fra.html
@@ -94,11 +94,11 @@
 					to Jim Milne, at <a href="mailto:jim.milne@tpsgc.gc.ca">Jim.Milne@tpsgc.gc.ca</a></p>
 				<hr /> -->
 				<p>&Agrave; la cale s&egrave;che d'Esquimalt (CSE), Travaux publics et Services
-					gouvernementaux Canada (TPSGC) fournira de fa&ccedil;on raisonnable :</p>
+					gouvernementaux Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>) fournira de fa&ccedil;on raisonnable&nbsp;:</p>
 				<ul>
 					<li>es services d'administration, pour les besoins de la r&eacute;servation
 						de services ou d'espace pour bateaux;</li>
-					<li>des pr&eacute;avis de 48 heures sur les changements de service ou d'utilisation
+					<li>des pr&eacute;avis de 48&nbsp;heures sur les changements de service ou d'utilisation
 						de l'espace qui pourraient influer sur le bon fonctionnement et la s&egrave;curit&eacute; de
 						l'installation; </li>
 					<li>un plan d'intervention d'urgence pour la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>;
@@ -113,7 +113,7 @@
 						doivent &ecirc;tre effectu&eacute;es de fa&ccedil;on raisonnable sur demande.</li>
 					<li>Les pr&eacute;avis de changements de services et/ou de capacit&eacute; de
 						l'installation seront, au moins neuf fois du 10, &eacute;mis dans un d&eacute;lai
-						de 48 heures apr&egrave;s la premi&egrave;re observation d'un changement
+						de 48&nbsp;heures apr&egrave;s la premi&egrave;re observation d'un changement
 						de condition dans la nature du service ou de la capacit&eacute;.</li>
 					<li>Le plan d'intervention d'urgence de la CSE sera examin&eacute;, et mis &agrave; jour
 						si n&eacute;cessaire, tous les deux ans.</li>
@@ -121,7 +121,7 @@
 						maritime valide ou un certificat d'installation portuaire valide et toutes
 						les v&eacute;rifications de s&eacute;curit&eacute; prescrites seront effectu&eacute;es.</li>
 					<li>Les diff&eacute;rends concernant les services et/ou les capacit&eacute;s
-						de la CSE seront g&eacute;r&eacute;s de la fa&ccedil;on suivante :</li>
+						de la CSE seront g&eacute;r&eacute;s de la fa&ccedil;on suivante&nbsp;:</li>
 				</ul>
 				<dl>
 
