--- a/ser/pompes-pumps-eng.html
+++ b/ser/pompes-pumps-eng.html
@@ -119,15 +119,15 @@
 				<a name="inonder-fill" id="inonder-fill"></a>
 				<h2>Filling-up and Emptying The Drydock</h2>
 				<p> To drain the basin dock three 54&quot; twin parallel centrifugal pumps
-					are used. These pumps are each rated at 66,000 Imperial gallons per minute
+					are used. These pumps are each rated at 66,000&nbsp;Imperial gallons per minute
 					(I.G.P.M). There is also two 20&quot; submerged auxiliary pumps which are
-					each rated at 9,000 I.G.P.M. Two heavy-duty submersible pumps are used in
+					each rated at 9,000&nbsp;I.G.P.M. Two heavy-duty submersible pumps are used in
 					addition to a hydraulic gate system or penstock.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Top of Page</a> </div>
 				<a name="comp" id="comp"></a>
 				<h2>Compressed Air</h2>
-				<p> Compressed air service is provided through 1000 cubic feet per minute
+				<p> Compressed air service is provided through 1000&nbsp;cubic feet per minute
 					compressors. Compressed air piping and distribution services are comprised
 					of a main line and four inch distribution lines at the North Landing Wharf,
 					South Jetty and Graving Dock.</p>
@@ -135,7 +135,7 @@
 						Top of Page</a> </div>
 				<a name="elec" id="elec"></a>
 				<h2>Electrical</h2>
-				<p> Electrical services in the yard include 1500 amp splitters, 480V, 400A
+				<p> Electrical services in the yard include 1500&nbsp;amp splitters, 480V, 400A
 					splitters and 120V duplex plug services as well as telephone and cable television
 					services. Emergency service is provided by a 475VA diesel powered generator
 					set.</p>
@@ -144,14 +144,14 @@
 				<a name="usees-sewage" id="usees-sewage"></a>
 				<h2>Sewage </h2>
 				<p> Sewer service is provided through a four inch main pumped through a sewage
-					lift station. Site drainage is through a 24 inch main with catch-basins
+					lift station. Site drainage is through a 24&nbsp;inch main with catch-basins
 					and sewers.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2>Yard Staff</h2>
 				<p>The yard staff provide a variety of services including keel block setting,
 					assisting with the docking and undocking vessels and maintaining the grounds
-					on this 19 hectare site.</p>
+					on this 19&nbsp;hectare site.</p>
 				<div style="text-align: center;"><img src="../images/personnel-staff.jpg" width="300" height="225" alt="Yard Staff building" /></div>
 
 				<p><i>Source: &nbsp;Harbour &amp; Shipping Journal, July 2002, Volume 85,
