--- a/services-eng.html
+++ b/services-eng.html
@@ -94,13 +94,13 @@
 					</h1>
 
           <p>
-          We are a dynamic full service drydock supporting national and international clientele 24 hours a day, seven days a week and 365 days a year. 
+          We are a dynamic full service drydock supporting national and international clientele 24&nbsp;hours a day, seven days a week and 365&nbsp;days a year. 
           </p>
 
           <h2>Pumphouse</h2>
 
           <p>
-          The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at 250-363-3768 or the pumphouse floor at 250-363-3788.
+          The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at 250-363-3768&nbsp;or the pumphouse floor at 250-363-3788.
           </p>
           <img src="images/pompe-pump.jpg" width="295" height="152" alt="Pumphouse" />
 
@@ -120,7 +120,7 @@
           <h2>Crane</h2>
 
           <p>
-          Our clients are serviced by three heavy-lift electrically-driven, rail-mounted travelling cranes as well as a 7 tonne Tower Crane on the South Jetty, and 3 mobile cranes.
+          Our clients are serviced by three heavy-lift electrically-driven, rail-mounted travelling cranes as well as a 7&nbsp;tonne Tower Crane on the South Jetty, and 3&nbsp;mobile cranes.
           </p>
 
           <p>Cranes at EGD:</p>
@@ -128,19 +128,19 @@
           <img src="images/grue-crane.jpg" width="193" height="280" alt="Crane" style="float: right; padding-left: 10px;" />
 
           <p>
-          <strong>Krupp 150 tonne Level Luffing Crane (1982)</strong> - 150-tonne capacity at 35 metres and a 100-tonne capacity at 50 metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15 tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
+          <strong>Krupp 150&nbsp;tonne Level Luffing Crane (1982)</strong> - 150-tonne capacity at 35&nbsp;metres and a 100-tonne capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
           </p>
 
           <p>
-          <strong>Ebco 30 tonne Level Luffing Crane (1984)</strong> - This quick maneuvering crane travels the full length of the Dock and has a 30-tonne capacity at 35 metres.
+          <strong>Ebco 30&nbsp;tonne Level Luffing Crane (1984)</strong> - This quick maneuvering crane travels the full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres.
           </p>
 
           <p>
-          <strong>Konecrane 30 tonne, Level Luffing Crane (2010)</strong> - The newest of our rail mounted cranes has a reach of 42 metres. This crane travels the full length of the south side of the graving dock.
+          <strong>Konecrane 30&nbsp;tonne, Level Luffing Crane (2010)</strong> - The newest of our rail mounted cranes has a reach of 42&nbsp;metres. This crane travels the full length of the south side of the graving dock.
           </p>
 
           <p>
-          <strong>Pecco 7 tonne Tower Crane</strong> is situated on the South Jetty of EGD and can service vessels berthed at the South Jetty.
+          <strong>Pecco 7&nbsp;tonne Tower Crane</strong> is situated on the South Jetty of EGD and can service vessels berthed at the South Jetty.
           </p>
 
           <p>
@@ -148,13 +148,13 @@
           </p>
 
           <p>
-          We also have 4 tonne and 6 tonne forklifts available to our clients.
+          We also have 4&nbsp;tonne and 6&nbsp;tonne forklifts available to our clients.
           </p>
 
           <h2>Risk Management</h2>
 
           <p>
-          The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that EGD maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship & Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do EGD employees work in a safe and secure environment, but also employees of the companies that operate out of the EGD facility.  
+          The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that EGD maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do EGD employees work in a safe and secure environment, but also employees of the companies that operate out of the EGD facility.  
           </p>
 
 			</div>
