--- a/site-fra.html
+++ b/site-fra.html
@@ -117,7 +117,7 @@
 					<li><a href="historique-history-fra.html">Historique</a>
 
 						<ul>
-							<li> <a href="his/1921-fra.html">1921 - 1923</a></li>
+							<li> <a href="his/1921-fra.html">1921&nbsp;- 1923</a></li>
 							<li> <a href="his/1925-fra.html">1925</a></li>
 							<li> <a href="his/1926-fra.html">1926</a></li>
 							<li> <a href="his/1927-fra.html">1927</a></li>
@@ -130,7 +130,7 @@
 					<li><a href="rendement-performance-fra.html">Norme de rendement</a></li>
 				</ul>
 				<ul>
-					<li> <a href="cn-cu-fra.html">Contactez <acronym title="Cale s&amp;grave;che d'Esquimalt">CSE</acronym></a></li>
+					<li> <a href="cn-cu-fra.html">Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
 				</ul>
 			</div>
 
